--- a/.github/workflows/dotnet-check.yml
+++ b/.github/workflows/dotnet-check.yml
@@ -1,13 +1,6 @@
 name: Dotnet lint check
 on:
-  push:
-    paths:
-      - "dotnetv3/**"
-    branches:
-      - main
   pull_request:
-    paths:
-      - "dotnetv3/**"
   workflow_dispatch:
 permissions:
   contents: read
@@ -23,13 +16,23 @@ jobs:
             5.0.x
             6.0.x
       - name: Checkout files
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            .github
+            dotnetv3
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v41
+        with:
+          files: "dotnetv3/**/*.{cs,sln,csproj,json}"
       - name: Build check
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           cd dotnetv3
           dotnet build -v=q --property WarningLevel=0 /clp:ErrorsOnly
       - name: Lint and format check
-        if: success() || failure()
+        if: steps.changed-files.outputs.any_changed == 'true' && (success() || failure())
         run: |
           cd dotnetv3
           dotnet format --verify-no-changes
