--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -1,14 +1,7 @@
 name: JavaScript
 
 on:
-  push:
-    paths:
-      - "javascriptv3/**"
-    branches:
-      - main
   pull_request:
-    paths:
-      - "javascriptv3/**"
   workflow_dispatch:
 
 jobs:
@@ -17,23 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-        name: Checkout files
+      - name: Checkout files
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            .github
+            javascriptv3
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
           files: "javascriptv3/**/*.{js,ts,jsx,tsx}"
       - name: Setup NodeJS
+        if: steps.changed-files.outputs.any_changed == 'true'
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
-      - run: npm i --prefix javascriptv3
-        name: Install dependencies
-#      - run: |
-#          changed_files=(${{steps.changed-files.outputs.all_changed_files}})
-#          npm run --prefix javascriptv3 ci-lint -- ${changed_files[@]//javascriptv3\/}
-#        name: Lint added and modified files
-      - run: ./javascriptv3/github_scripts/validate_packages.sh 
-        name: Validate package names
-
+      - name: Install dependencies
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: npm i --prefix javascriptv3
+      - name: Validate package names
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: ./javascriptv3/github_scripts/validate_packages.sh
+      - name: Lint added and modified files
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: |
+          changed_files=(${{steps.changed-files.outputs.all_changed_files}})
+          npm run --prefix javascriptv3 ci-lint -- ${changed_files[@]//javascriptv3\/}
