updated the iot Readme

--- a/.doc_gen/metadata/iot_metadata.yaml
+++ b/.doc_gen/metadata/iot_metadata.yaml
@@ -31,6 +31,15 @@ iot_DescribeEndpoint:
   synopsis: get &IoT; endpoint information.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.describe.endpoint.main
     Java:
       versions:
         - sdk_version: 2
@@ -71,6 +80,15 @@ iot_ListCertificates:
   synopsis: list your &IoT; certificates.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.list.certs.main
     Java:
       versions:
         - sdk_version: 2
@@ -87,6 +105,15 @@ iot_CreateCertificate:
   synopsis: create an &IoT; certificate.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.create.cert.main
     Java:
       versions:
         - sdk_version: 2
@@ -103,6 +130,15 @@ iot_DeleteCertificate:
   synopsis: delete an &IoT; certificate.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.delete.cert.main
     Java:
       versions:
         - sdk_version: 2
@@ -119,6 +155,15 @@ iot_SearchIndex:
   synopsis: query the &IoT; search index.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.search.thing.main
     Java:
       versions:
         - sdk_version: 2
@@ -135,6 +180,15 @@ iot_DeleteThing:
   synopsis: delete an &IoT; thing.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.delete.thing.main
     Java:
       versions:
         - sdk_version: 2
@@ -151,6 +205,15 @@ iot_DescribeThing:
   synopsis: describe an &IoT; thing.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.describe.thing.main
     Java:
       versions:
         - sdk_version: 2
@@ -167,6 +230,15 @@ iot_AttachThingPrincipal:
   synopsis: attach an &IoT; certificate.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.attach.thing.main
     Java:
       versions:
         - sdk_version: 2
@@ -183,6 +255,15 @@ iot_DetachThingPrincipal:
   synopsis: detach an &IoT; certificate.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.detach.thing.main
     Java:
       versions:
         - sdk_version: 2
@@ -199,6 +280,15 @@ iot_UpdateThing:
   synopsis: update an &IoT; thing.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.update.thing.main
     Java:
       versions:
         - sdk_version: 2
@@ -215,6 +305,15 @@ iot_CreateRule:
   synopsis: create an &IoT; rule.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.create.rule.main
     Java:
       versions:
         - sdk_version: 2
@@ -231,6 +330,15 @@ iot_CreateThing:
   synopsis: create an &IoT; thing.
   category:
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.create.thing.main
     Java:
       versions:
         - sdk_version: 2
@@ -247,6 +355,15 @@ iot_Scenario:
   synopsis: working with &IoT; device management use cases using &IoT; SDK
   category: Scenarios
   languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.kotlin.scenario.main
     Java:
       versions:
         - sdk_version: 2
