Github: use sparse checkout options to reduce action runners memory and storage usage.
Also bump actions/checkout and actions/setup-python to v4:

> Node.js 16 actions are deprecated. Please update the following actions to use Node.js 20: actions/checkout@v3, actions/setup-python@v3. For more information see: https://github.blog/changelog/2023-09-22-github-actions-transitioning-from-node-16-to-node-20/.

--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -10,7 +10,7 @@ on:
     types:
       - closed
     branches:
-      - 'main'
+      - "main"
 
 jobs:
   push_to_registry:
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       ##################################################
       ################## ECR PUBLIC ####################
