--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -2,12 +2,12 @@ name: golangci-lint
 on:
   push:
     paths:
-      - 'gov2/**'
+      - "gov2/**"
     branches:
       - main
   pull_request:
     paths:
-      - 'gov2/**'
+      - "gov2/**"
   workflow_dispatch:
 permissions:
   contents: read
@@ -21,7 +21,10 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.18
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            gov2
       - name: install golangci-lint
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.47.3
       - name: run golangci-lint
