--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -17,13 +17,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Checkout files
+        with:
+          sparse-checkout: |
+            javascriptv3
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
-          files: "javascriptv3/**/*.{js,ts,jsx,tsx}"
+          files: "javascriptv3/**/*.{js,ts,jsx,tsx,json}"
       - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
