--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -61,7 +61,7 @@ ec2_Hello:
                 - cpp.example_code.ec2.hello_ec2.cmake
             - description: Code for the hello_ec2.cpp source file.
               snippet_tags:
-                - cpp.example_code.ec2.hello_ec2
+                - cpp.example_code.ec2.hello_ec2.cmake
           sdkguide: 
   services:
     ec2: {DescribeSecurityGroups}
