updated Java SDK MediaStore Tests

--- a/javav2/example_code/mediastore/pom.xml
+++ b/javav2/example_code/mediastore/pom.xml
@@ -87,5 +87,10 @@
             <artifactId>mediastoredata</artifactId>
             <version>2.20.26</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.26</version>
+        </dependency>
     </dependencies>
 </project>
